<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">NaoControl</string>
    <string name="app_name">NaoControl</string>
    <string name="button_ip">192.168.100.44</string>
    <string name="button_port">9559</string>
    <string name="button_connect">Connect</string>
    <string name="connecting_message">Please wait. Trying to connect</string>
    <string name="not_connected">Could not connect</string>
    <string name="connected">Successfully Connected</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_speak">Speak</string>
    <string name="button_right">Right</string>
    <string name="button_video">Video</string>
    <string name="button_left">Left</string>
    <string name="button_up">Up</string>
    <string name="button_down">Down</string>
    <string name="button_stand_up">Stand Up</string>
    <string name="button_sit_down">Sit Down</string>
    <string name="button_head">Head</string>
    <string name="speak_message">New message</string>
    <string name="button_back">Back</string>
    <string name="disconnect">Disconnected from Nao</string>
    <string name="button_control">Control</string>
    <string name="head_control_on">Head control (ON)</string>
    <string name="head_control_off">Head control (OFF)</string>
</resources>
